Fix BE whatsapp api
